--- a/1. Build and deploy your first website/9. Lets build Google/index.html
+++ b/1. Build and deploy your first website/9. Lets build Google/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"><!-- IGNORE THIS LINE 👇 -->
 <link rel="stylesheet" href="styles.css">
 
-
+<img src="./google.png" alt="logo">
+<input type="text">
+<button>Google Search</button>
+<button>I'm feeling lucky</button>
 <!--
 Challenge:
 Write the four HTML tags you need to create a Google.com clone.
