--- a/1. Build and deploy your first website/13. Aside - Lists/index.html
+++ b/1. Build and deploy your first website/13. Aside - Lists/index.html
@@ -1,7 +1,16 @@
 <!doctype html>
 <html>
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"></head>
-    <body></body>
+    <body>
+        <h1>Beijing Olympics</h1>
+        <ul>
+            <li>Norway</li>
+            <li>China</li>
+            <li>USA</li>
+            <li>India</li>
+            <li>Pakistan lul</li>
+        </ul>
+    </body>
 </html>
 
 <!--
