--- a/1. Build and deploy your first website/14. Build a Personal Website/index.html
+++ b/1. Build and deploy your first website/14. Build a Personal Website/index.html
@@ -10,5 +10,18 @@
         Challenge 1:
         Write the HTML for your personal website.
         -->
+        <img src="./per.jpg" alt="profile image">
+        <h1>Hi, my name is Per</h1>
+        <h2>Fun facts about me:</h2>
+        <ul>
+            <li>36 years old</li>
+            <li>Live in Norway</li>
+            <li>Sing in a choir</li>
+        </ul>
+        <p>Please connect with me on
+            <a href="https://www.linkedin.com">linkedin here.</a>
+        </p>
+        <input type="email" name="" id="" placeholder="Enter email...">
+        <button>Join newsletter</button>
     </body>
 </html>
