--- a/2. Build a Google.com clone/5. Link to the CSS file/index.html
+++ b/2. Build a Google.com clone/5. Link to the CSS file/index.html
@@ -3,7 +3,8 @@
     <!-- 
     Challenge: Link to the CSS file!
     Hint: google it ;)
-     -->
+    -->
+    <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <img src="google.png" />
