Entire chap 3 completed in ex1

--- a/3. Build a digital Business Card/1. Building your digital Business Card/index.html
+++ b/3. Build a digital Business Card/1. Building your digital Business Card/index.html
@@ -4,11 +4,32 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/per.png">
+            <img class="avatar" src="./images/1670666255908.jpeg" alt="Govinda Agrawal smiling at the camera">
             <div >
-                <h3>Per Harald Borgen</h3>
-                <p>Frontend Developer</p>
-                <h4>Oslo, Norway</h4>
+                <h3>Govinda Agrawal</h3>
+                <div class="qual">
+                    <ol>
+                        <li>
+                            B. Tech (Mechanical Engineering), S.I.T.
+                        </li>
+                        <li>
+                            A.I. and M.L. Developer
+                        </li>
+                        <li>
+                            Front end Developer
+                        </li>
+                        <li>
+                            Optimization Enthusiast
+                        </li>
+                        <li>
+                            Like reading
+                        </li>
+                        <li>
+                            Like lul yk
+                        </li>
+                    </ol>
+                </div>
+                <h4>Pune, India</h4>
             </div>
         </div>
     </body>
