--- a/prac/index.html
+++ b/prac/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Deafault Browser Styles</h1>
+    <h1>Hello, I am Govinda Agrawal</h1>
+    <p>Lorem ipsum doloconsectetur adipisicing elit. Minima cumque explicabo, a nesciunt impedit perferendis esse officia excepturi. Placeat soluta eligendi voluptates exercitationem aspernatur accusantium sit, dolores minima. Iusto, ipsum.</p>
 </body>
 </html>
